fixes layout issues and adds enriches ui

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
 header{
 	padding: 20px 35px 10px 35px ;
 	background: #fff;
-	
+
 }
 
 input{
@@ -125,7 +125,7 @@ input:hover{
 }
 
 /*carousel*/
-.carousel-inner.onebyone-carosel { margin: auto; width: 90%; }
+.carousel-inner.onebyone-carosel {margin: auto;width: 100%;height: 321px;}
 .onebyone-carosel .active.left { left: -33.33%; }
 .onebyone-carosel .active.right { left: 33.33%; }
 .onebyone-carosel .next { left: 33.33%; }
@@ -152,11 +152,15 @@ input:hover{
     background-image: none !important;
     opacity: 1 !important;
     line-height: 46px;
+    	 box-shadow: 0 2px 5px rgba(0,0,0,0.25), 0 2px 5px rgba(0,0,0,0.22);	
+
 }
 
 .carousel_control2{	
     right: 50px !important;
     left: 0;
+    	 box-shadow: 0 2px 5px rgba(0,0,0,0.25), 0 2px 5px rgba(0,0,0,0.22);	
+
 }
 
 .heading{
@@ -237,6 +241,7 @@ input:hover{
 .card_heading{
 	font-weight: 800;
 	color: #727272;
+	margin-top: 28px;
 }
 
 
@@ -335,4 +340,49 @@ fieldset, label { margin: 0; padding: 0; }
 	width: 45px;
 	height: 60px;
 	background: #fff;
+}
+
+.tiles_container{
+	background: #fbadaf;
+	display: inline-block;
+	width: 100%;
+	border-left: 1px solid #f2f5f7;
+	border-right: 1px solid #f2f5f7;
+	/*height: 100%;*/
+}
+
+.padding-fix{
+	padding: 0 !important;
+}
+
+.purple{
+	background: #ecb8d5;
+}
+
+.blue{
+	background: #a2deea;
+}
+
+.img_card1{
+	box-shadow: 0 2px 20px rgba(0,0,0,0.15), 0 5px 05px rgba(0,0,0,0.12);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	height: 280px;
+	position: relative;
+	top: 31px;
+	left: 15px;
+	background: #fff;
+}
+
+.textwhite{
+	color: #fff;
+}
+
+.btn_white{
+	border-radius: 50px;
+	width: 70%;
+	background: #fff;
+	color: #92566E;
+	margin: 30px;
+	font-weight: 800;
+	box-shadow: 0 12px 28px rgba(146,86,110,0.25), 0 5px 10px rgba(146,86,110,0.12);
 }
